--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,18 @@
 
 # Site settings
 title: Eslam Mostafa
+subtitle: Lead. Inspire. Make a Difference.
 email: cseslam@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Curious Software Engineer with passion to open-source and free software.
+  i am self-studying Computer Science and rapidly-learning new technologies,
+  eager to be always ahead of what technology has to offer.
+  I have been playing with Python, Gtk+, C#, Sql, NodeJS for quite sometime now
+  and looking forward to build libraries and tools in GoLang and study Machine
+  Learning to make smarter applications.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://eslammostafa.github.io" # the base hostname & protocol for your site
+# url: "http://eslammostafa.github.io" # the base hostname & protocol for your site
+url: "http://localhost:4000" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  eslammostafa
 
