--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ description: > # this means to ignore newlines until "baseurl:"
   and looking forward to build libraries and tools in GoLang and study Machine
   Learning to make smarter applications.
 baseurl: "" # the subpath of your site, e.g. /blog
-# url: "http://eslammostafa.github.io" # the base hostname & protocol for your site
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "http://eslammostafa.github.io" # the base hostname & protocol for your site
+# url: "http://localhost:4000" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  eslammostafa
 
