--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,15 @@ subtitle: Lead. Inspire. Make a Difference.
 email: cseslam@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Curious Software Engineer with passion to open-source and free software.
-  i am self-studying Computer Science and rapidly-learning new technologies,
-  eager to be always ahead of what technology has to offer.
+  Continously building & improving my CS fundamentals, making sure to be
+  always ahead of what technology has to offer.
+  <br><br>
   I have been playing with Python, Gtk+, C#, Sql, NodeJS for quite sometime now
   and looking forward to build libraries and tools in GoLang and study Machine
   Learning to make smarter applications.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://eslammostafa.github.io" # the base hostname & protocol for your site
-# url: "http://localhost:4000" # the base hostname & protocol for your site
+# url: "http://eslammostafa.github.io" # the base hostname & protocol for your site
+url: "http://localhost:4000" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  eslammostafa
 
