--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Eslam Mostafa
-subtitle: Lead. Inspire. Make a Difference.
+subtitle: Generalist Software Engineer
 email: cseslam@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Curious Software Engineer with passion to open-source and free software.
