--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,4 +1,4 @@
-- title: Backend Web Developer (Freelance)
+- title: API Developer (Freelance)
   company: Koshkelmedia
   start_date: "March 2016"
   end_date: "Apr 2016"
@@ -22,7 +22,7 @@
   end_date: "Dec 2014"
   desc: "blah blah"
 
-- title: Web Developer
+- title: Full Stack Developer
   company: TCA
   start_date: "Jan 2014"
   end_date: "Apr 2014"
