--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,7 +3,7 @@
   desc: "http router(mux) for Golang"
 
 - title: Msar Academy
-  uri: "http://msaracademy.github.io"
+  uri: "http://github.com/msaracademy"
   desc: "an expirement for open source blog, where everyone can contribute<br>based on Jekyll"
 
 - title: Bankam
