--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: >
   احب كتابة ال APIs ولكن لدي رغبة في الدخول لعوالم اخرى بدافع التجربة.
   حاليًا اقوم بتعلم لغة Go من خلال التطوع في مشاريع مفتوحة المصدر.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://eslammostafa.github.io" # the base hostname & protocol for your site
+url: "http://eslammostafa.com" # the base hostname & protocol for your site
 # url: "http://localhost:4000" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  eslammostafa
