--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ subtitle: إلى اللا النهائية وما بعدها
 email: cseslam@gmail.com
 description: >
   مطور برمجيات فضولي٬ لا اتوقف عن التعلم. لدي شغف بالمصادر المفتوحة و البرمجيات الحرة.
-  احب كتابة ال APIs ولكن لدي رغبة في الدخول لعوالم اخرى بدافع التجربة.
-  حاليًا اقوم بتعلم لغة Go من خلال التطوع في مشاريع مفتوحة المصدر.
+  اعمل على كتابة ال APIs وتطبيقات سطح المكتب لويندوز ولينكس.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://eslammostafa.com" # the base hostname & protocol for your site
 # url: "http://localhost:4000" # the base hostname & protocol for your site
