fix visual studio icon filename

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -44,7 +44,7 @@
   image: atom.png
 
 - title: Microsoft Visual Studio
-  image: vsutdio.jpg
+  image: vstعdio.jpg
 
 - title: Jekyll
   image: jekyll.png
