--- a/_data/contributions.yml
+++ b/_data/contributions.yml
@@ -2,5 +2,5 @@
   company: GNOME Foundation
   start_date: "Apr 2013"
   end_date: "Oct 2013"
-  desc: "blah blah"
+  desc: Under Heavy Development
   uri: http://gnome.org
