--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -3,32 +3,32 @@
   company_url: http://cloudinn.net
   start_date: "May 2016"
   end_date: "Present"
-  desc: "blah blah"
+  desc: Under Heavy Development
   uri: http://koshkelmedia.com
 
 - title: Backend Web Developer (Freelance)
   company: NowYouSpeak
   start_date: "Apr 2015"
   end_date: "Oct 2015"
-  desc: "blah blah"
+  desc: Under Heavy Development
   uri: http://nowyouspeak.org
 
 - title: Software Engineer
   company: Egyptian Military Services
   start_date: "Feb 2015"
   end_date: "Mar 2016"
-  desc: "blah blah"
+  desc: Under Heavy Development
 
 - title: Junior Software Engineer
   company: KSYS
   start_date: "Apr 2014"
   end_date: "Dec 2014"
-  desc: "blah blah"
+  desc: Under Heavy Development
   uri: http://ksys.me
 
 - title: Full Stack Developer
   company: TCA
   start_date: "Jan 2014"
   end_date: "Apr 2014"
-  desc: "blah blah"
+  desc: Under Heavy Development
   uri: http://topchoiceadmissions.com
